--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+<link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="assets/style.css">
 <title>kmvn</title>
@@ -35,10 +36,9 @@
         </div>
         <div class="col-md-6 no-gutters">
             <div class="rightSide d-flex flex-column justify-content-center align-items-center">
-                <div class="p-2"><h1>Kristen Michelle Van Neste</h1></div>
-                <div class="p-2"><h4>Full-Stack Web Developer</h4></div>
+                <div class="p-2 name">Kristen Michelle Van Neste</div>
+                <div class="p-2 title">Full-Stack Web Developer</div>
             </div>
-             
         </div>
     </section>
     <!-- About Me -->
