adding color to css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
  <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">kmvn</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -42,8 +42,20 @@
         </div>
     </section>
     <!-- About Me -->
-    <section class='row no-gutters'>
-        
+    <section class='container'>
+        <div class="row">
+        <div class="col-md-4">
+            <img src="assets/images/fb_propic.jpg" alt='photo of Kristen' class="proPic">
+        </div>
+        <div class="col-md-8">
+            <p>
+                My name is Kristen Michelle Van Neste and I am a software engineer.  
+            </p>
+            <p>   
+                In May 2017 I graduated with distinction from the University of Delaware and began traveling the country as a certified Associate Wildlife Biologist.  I had the incredible opportunity of working in all four corners of the United States studying a wide range of wildlife, from bats to mountain lions.  My experience as a biologist introduced me to technologies such as GIS, database management, and software development.  As the world changed due to COVID-19, so did my goals.  I am taking advantage of this time in quarantine to shift my focus and pursue a career as a software engineer.
+            </p>
+        </div>
+    </div>
     </section>
 
     <!-- Projects -->
