--- a/index.html
+++ b/index.html
@@ -1,71 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/style.css">
-<title>kmvn</title>
-</head>
-<body>
- <!-- Navbar -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="Description" content="Enter your description here" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="assets/style.css" />
+    <title>kmvn</title>
+  </head>
+  <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">kmvn</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Projects</a>
-            <a class="nav-link" href="#">Skills</a>
-            <a class="nav-link" href="#">Contact</a>
-          </div>
+      <a class="navbar-brand" href="#">kmvn</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#">Skills</a>
+          <a class="nav-link" href="#">Contact</a>
         </div>
-      </nav>
-<!--Name Banner-->
-    <section class='row no-gutters'>
-        <div class="col-md-6 no-gutters">
-            <div class="leftSide d-flex justify-content-center align-items-center">
-            </div>
+      </div>
+    </nav>
+    <!--Name Banner-->
+    <section class="row no-gutters">
+      <div class="col-md-6 no-gutters">
+        <div class="leftSide d-flex justify-content-center align-items-center"></div>
+      </div>
+      <div class="col-md-6 no-gutters">
+        <div class="rightSide d-flex flex-column justify-content-center align-items-center">
+          <div class="p-2 name">Kristen Michelle Van Neste</div>
+          <div class="p-2 title">Full-Stack Web Developer</div>
         </div>
-        <div class="col-md-6 no-gutters">
-            <div class="rightSide d-flex flex-column justify-content-center align-items-center">
-                <div class="p-2 name">Kristen Michelle Van Neste</div>
-                <div class="p-2 title">Full-Stack Web Developer</div>
-            </div>
-        </div>
+      </div>
     </section>
     <!-- About Me -->
-    <section class='container'>
+    <section class="aboutMe">
+      <div class="container">
         <div class="row">
-        <div class="col-md-4">
-            <img src="assets/images/fb_propic.jpg" alt='photo of Kristen' class="proPic">
+          <div class="col-md-12 d-flex justify-content-center align-items-center">
+            <h2 class="sectionHeader" id="aboutMeHeader">About Me</h2>
+          </div>
         </div>
-        <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-4 d-flex justify-content-center align-items-center">
+            <img src="assets/images/fb_propic.jpg" alt="photo of Kristen" class="proPic"/>
+          </div>
+          <div class="col-md-8 d-flex flex-column justify-content-center align-items-left description">
             <p>
-                My name is Kristen Michelle Van Neste and I am a software engineer.  
+              My name is Kristen Michelle Van Neste and I am a software
+              engineer.
             </p>
-            <p>   
-                In May 2017 I graduated with distinction from the University of Delaware and began traveling the country as a certified Associate Wildlife Biologist.  I had the incredible opportunity of working in all four corners of the United States studying a wide range of wildlife, from bats to mountain lions.  My experience as a biologist introduced me to technologies such as GIS, database management, and software development.  As the world changed due to COVID-19, so did my goals.  I am taking advantage of this time in quarantine to shift my focus and pursue a career as a software engineer.
+            <p>
+              In May 2017 I graduated with distinction from the University of
+              Delaware and began traveling the country as a certified Associate
+              Wildlife Biologist. I had the incredible opportunity of working in
+              all four corners of the United States studying a wide range of
+              wildlife, from bats to mountain lions. My experience as a
+              biologist introduced me to technologies such as GIS, database
+              management, and software development. As the world changed due to
+              COVID-19, so did my goals. I am taking advantage of this time in
+              quarantine to shift my focus and pursue a career as a software
+              engineer.
             </p>
+          </div>
         </div>
-    </div>
+      </div>
     </section>
-
     <!-- Projects -->
-
+        <!-- Header Container-->
+ <section class="projects">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center align-items-center">
+                <h2 class="sectionHeader" id="portfolioHeader">Portfolio</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 d-flex justify-content-center align-items-center">
+                <h4 class="sectionHeader" id="portfolioHeader">Collaborations</h4>
+            </div>
+        </div>
+    </div>       
+    <!-- Card Container -->
+        <div class="container">
+            <!-- row 1 -->
+            <div class="card-deck">
+                <div class="card">
+                        <img src="./assets/images/Refresh.png" class="card-img-top" alt="Image of a Refresh Home page">
+                        <div class="card-body">
+                          <h5 class="card-title">Refresh</h5>
+                          <p class="card-text">Refresh is a task tracking app for one of your largest investments - your home.</p>
+                          <a href="home-refresh-app.herokuapp.com/" class="btn btn-primary">Refresh</a>
+                          <a href="https://github.com/hihellos/Refresh" class="btn btn-primary">Source Code</a>
+                        </div>
+                   </div>
+                <div class="card">
+                        <img src="./assets/images/LocalGrub.png" class="card-img-top" alt="Image of LocalGrub login">
+                        <div class="card-body">
+                          <h5 class="card-title">Local Grub</h5>
+                          <p class="card-text">Hungry? Why not support your local business with this personalized app. Gather restaurant information from any city and discover your new favorite (non-chain) metropolitan meal.</p>
+                          <a href="https://localgrub.herokuapp.com/" class="btn btn-primary">Local Grub</a>
+                          <a href="https://github.com/eplatvoet/localgrub" class="btn btn-primary">Source Code</a>
+                        </div>
+                </div>
+                <div class="card">
+                        <img src="./assets/images/NASANow.png" class="card-img-top" alt="Image of NASA Now">
+                        <div class="card-body">
+                          <h5 class="card-title">NASA Now</h5>
+                          <p class="card-text">NASA NOW is a collaborative project designed to display NASA's latest photographs, media, and youtube videos.</p>
+                          <a href="https://kmvanneste.github.io/NASA-Now/" class="btn btn-primary">NASA Now</a>
+                          <a href="https://github.com/kmvanneste/NASA-Now" class="btn btn-primary">Source Code</a>
+                        </div>
+                </div>
+            </div>
+          <!-- Header 2 -->
+          <div class="row">
+            <div class="col-md-12 d-flex justify-content-center align-items-center">
+                <h4 class="sectionHeader" id="portfolioHeader">Individual Projects</h4>
+            </div>
+        </div> 
+        <!-- Row 2 -->
+        <div class="card-deck">
+            <div class="card">
+                    <img src="./assets/images/City_Weather.png" class="card-img-top" alt="Screenshot of city weather app">
+                    <div class="card-body">
+                      <h5 class="card-title">City Weather</h5>
+                      <p class="card-text">Traveling to your favorite metropolitan area? Use City-Weather to help plan your next trip.</p>
+                      <a href="https://kmvanneste.github.io/City-Weather/" class="btn btn-primary">City Weather</a>
+                      <a href="https://github.com/kmvanneste/City-Weather" class="btn btn-primary">Source Code</a>
+                    </div>
+            </div>
+                <div class="card">
+                    <img src="./assets/images/lion.jpg" class="card-img-top" alt="Image of a lion yawning">
+                    <img src="./assets/images/Quiz_Question.png" class="card-img-top" alt="Screenshot of Quiz">
+                    <div class="card-body">
+                      <h5 class="card-title">Animal Quiz</h5>
+                      <p class="card-text">So you think you know a thing or two about the animal kingdom? Take this timed quiz to test your knowledge!</p>
+                      <a href="https://kmvanneste.github.io/Code-Quiz/" class="btn btn-primary">Animal Quiz</a>
+                      <a href="https://github.com/kmvanneste/Code-Quiz" class="btn btn-primary">Source Code</a>
+                  </div>
+            </div>
+                <div class="card">
+                    <img src="./assets/images/Budget.png" class="card-img-top" alt="Budget App Screenshot">
+                    <div class="card-body">
+                      <h5 class="card-title">No Excuses, The Budget App</h5>
+                      <p class="card-text">Keep your bank account balanced with The Budget App. Users can add expenses and deposits to their budget with or without an internet connection.</p>
+                      <a href="https://my-notepad-kvn.herokuapp.com/" class="btn btn-primary">The Budget App</a>
+                      <a href="https://github.com/kmvanneste/No-Excuses-The-Budget-App" class="btn btn-primary">Source Code</a>
+                </div>
+            </div>
+            </div>
+        </div>
+      </section>
     <!-- Skills -->
 
     <!-- Contact Me Form -->
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
