styled portfolio cards

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           </div>
         </div>
       </div>
+      <br>
     </section>
     <!-- Projects -->
         <!-- Header Container-->
@@ -88,36 +89,40 @@
             </div>
         </div>
     </div>       
-    <!-- Card Container -->
-        <div class="container">
             <!-- row 1 -->
-            <div class="card-deck">
-                <div class="card">
+            <div class="row justify-content-center">
+                <div class="col-lg-4 text-center">
+                    <div class="card justify-content-center">
                         <img src="./assets/images/Refresh.png" class="card-img-top" alt="Image of a Refresh Home page">
-                        <div class="card-body">
+                        <div class="card-body text-center">
                           <h5 class="card-title">Refresh</h5>
                           <p class="card-text">Refresh is a task tracking app for one of your largest investments - your home.</p>
-                          <a href="home-refresh-app.herokuapp.com/" class="btn btn-primary">Refresh</a>
-                          <a href="https://github.com/hihellos/Refresh" class="btn btn-primary">Source Code</a>
+                          <a href="home-refresh-app.herokuapp.com/" class="btn btn-dark">Refresh</a>
+                          <a href="https://github.com/hihellos/Refresh" class="btn btn-dark">Source Code</a>
                         </div>
                    </div>
-                <div class="card">
+                </div>
+                <div class="col-lg-4 text-center">
+                    <div class="card justify-content-center">
                         <img src="./assets/images/LocalGrub.png" class="card-img-top" alt="Image of LocalGrub login">
-                        <div class="card-body">
+                        <div class="card-body text-center">
                           <h5 class="card-title">Local Grub</h5>
                           <p class="card-text">Hungry? Why not support your local business with this personalized app. Gather restaurant information from any city and discover your new favorite (non-chain) metropolitan meal.</p>
-                          <a href="https://localgrub.herokuapp.com/" class="btn btn-primary">Local Grub</a>
-                          <a href="https://github.com/eplatvoet/localgrub" class="btn btn-primary">Source Code</a>
+                          <a href="https://localgrub.herokuapp.com/" class="btn btn-dark">Local Grub</a>
+                          <a href="https://github.com/eplatvoet/localgrub" class="btn btn-dark">Source Code</a>
                         </div>
+                    </div>
                 </div>
-                <div class="card">
-                        <img src="./assets/images/NASANow.png" class="card-img-top" alt="Image of NASA Now">
-                        <div class="card-body">
+                <div class="col-lg-4 text-center">
+                    <div class="card justify-content-center">
+                        <img src="./assets/images/NASANow.png" class="card-img-top" alt="Image of NASA Now home page">
+                        <div class="card-body text-center">
                           <h5 class="card-title">NASA Now</h5>
                           <p class="card-text">NASA NOW is a collaborative project designed to display NASA's latest photographs, media, and youtube videos.</p>
-                          <a href="https://kmvanneste.github.io/NASA-Now/" class="btn btn-primary">NASA Now</a>
-                          <a href="https://github.com/kmvanneste/NASA-Now" class="btn btn-primary">Source Code</a>
+                          <a href="https://kmvanneste.github.io/NASA-Now/" class="btn btn-dark">NASA Now</a>
+                          <a href="https://github.com/kmvanneste/NASA-Now" class="btn btn-dark">Source Code</a>
                         </div>
+                    </div>
                 </div>
             </div>
           <!-- Header 2 -->
@@ -125,41 +130,56 @@
             <div class="col-md-12 d-flex justify-content-center align-items-center">
                 <h4 class="sectionHeader" id="portfolioHeader">Individual Projects</h4>
             </div>
-        </div> 
+           </div> 
         <!-- Row 2 -->
-        <div class="card-deck">
-            <div class="card">
+        <div class="row">
+            <div class="col-lg-4 text-center">
+                <div class="card justify-content-center">
                     <img src="./assets/images/City_Weather.png" class="card-img-top" alt="Screenshot of city weather app">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                       <h5 class="card-title">City Weather</h5>
                       <p class="card-text">Traveling to your favorite metropolitan area? Use City-Weather to help plan your next trip.</p>
-                      <a href="https://kmvanneste.github.io/City-Weather/" class="btn btn-primary">City Weather</a>
-                      <a href="https://github.com/kmvanneste/City-Weather" class="btn btn-primary">Source Code</a>
+                      <a href="https://kmvanneste.github.io/City-Weather/" class="btn btn-dark">City Weather</a>
+                      <a href="https://github.com/kmvanneste/City-Weather" class="btn btn-dark">Source Code</a>
                     </div>
-            </div>
-                <div class="card">
-                    <img src="./assets/images/lion.jpg" class="card-img-top" alt="Image of a lion yawning">
-                    <img src="./assets/images/Quiz_Question.png" class="card-img-top" alt="Screenshot of Quiz">
-                    <div class="card-body">
-                      <h5 class="card-title">Animal Quiz</h5>
-                      <p class="card-text">So you think you know a thing or two about the animal kingdom? Take this timed quiz to test your knowledge!</p>
-                      <a href="https://kmvanneste.github.io/Code-Quiz/" class="btn btn-primary">Animal Quiz</a>
-                      <a href="https://github.com/kmvanneste/Code-Quiz" class="btn btn-primary">Source Code</a>
-                  </div>
-            </div>
-                <div class="card">
-                    <img src="./assets/images/Budget.png" class="card-img-top" alt="Budget App Screenshot">
-                    <div class="card-body">
-                      <h5 class="card-title">No Excuses, The Budget App</h5>
-                      <p class="card-text">Keep your bank account balanced with The Budget App. Users can add expenses and deposits to their budget with or without an internet connection.</p>
-                      <a href="https://my-notepad-kvn.herokuapp.com/" class="btn btn-primary">The Budget App</a>
-                      <a href="https://github.com/kmvanneste/No-Excuses-The-Budget-App" class="btn btn-primary">Source Code</a>
                 </div>
             </div>
+            <div class="col-lg-4 text-center">
+                <div class="card justify-content-center">
+                    <img src="./assets/images/lion.jpg" class="card-img-top" alt="Image of a lion yawning">
+                    <div class="card-body text-center">
+                      <h5 class="card-title">Animal Quiz</h5>
+                      <p class="card-text">So you think you know a thing or two about the animal kingdom? Take this timed quiz to test your knowledge!</p>
+                      <a href="https://kmvanneste.github.io/Code-Quiz/" class="btn btn-dark">Animal Quiz</a>
+                      <a href="https://github.com/kmvanneste/Code-Quiz" class="btn btn-dark">Source Code</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col-lg-4 text-center">
+                <div class="card justify-content-center">
+                    <img src="./assets/images/Budget.png" class="card-img-top" alt="Budget App Screenshot">
+                    <div class="card-body text-center">
+                      <h5 class="card-title">No Excuses, The Budget App</h5>
+                      <p class="card-text">Keep your bank account balanced with The Budget App. Users can add expenses and deposits to their budget with or without an internet connection.</p>
+                      <a href="https://my-notepad-kvn.herokuapp.com/" class="btn btn-dark">The Budget App</a>
+                      <a href="https://github.com/kmvanneste/No-Excuses-The-Budget-App" class="btn btn-dark">Source Code</a>
+                </div>
+              </div>
             </div>
         </div>
-      </section>
+</section>
     <!-- Skills -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center align-items-center">
+                  <h2 class="sectionHeader" id="aboutMeHeader">Skills</h2>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
 
     <!-- Contact Me Form -->
 
