started skills section

--- a/index.html
+++ b/index.html
@@ -169,15 +169,37 @@
         </div>
 </section>
     <!-- Skills -->
-    <section>
+    <section class="skills">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
                   <h2 class="sectionHeader" id="aboutMeHeader">Skills</h2>
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Git</p>
+                </div> 
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Git</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Git</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Git</p>
+                </div>
+            </div>
 
+
+
+
+        </div>
+        
 
     </section>
 
