--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
                     <p>Git</p>
                 </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-react"></i>
+                    <p>React</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-html5"></i>
+                    <p>HTML5</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-css3"></i>
+                    <p>CSS3</p>
+                </div>
+            </div>
+            <br><br>
+            <div class="row">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Git</p>
+                </div> 
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-git-alt"></i>
                     <p>Git</p>
                 </div>
