editing skills section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center align-items-center">
-                <h2 class="sectionHeader" id="portfolioHeader">Portfolio</h2>
+                <h2 class="sectionHeader" id="portfolioHeader">Deployed Applications</h2>
             </div>
         </div>
         <div class="row">
@@ -179,7 +179,7 @@
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-git-alt"></i>
-                    <p>Git</p>
+                    <p>JavaScript</p>
                 </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-react"></i>
@@ -198,20 +198,44 @@
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-git-alt"></i>
-                    <p>Git</p>
+                    <p>Express</p>
                 </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
-                    <p>Git</p>
+                    <i class="fab fa-node"></i>
+                    <p>Node.js</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
-                    <p>Git</p>
+                    <i class="fas fa-database"></i>
+                    <p>MySQL</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
-                    <p>Git</p>
+                    <i class="fas fa-database"></i>
+                    <p>MongoDB</p>
                 </div>
+            </div>
+            <br><br>
+            <div class="row">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>Material-UI</p>
+                </div> 
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-bootstrap"></i>
+                    <p>Bootstrap</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <p>jQuery</p>
+                </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <p>Handlebars</p>
+                </div>
+            </div>
+            <br><br>
+            <div class="row">
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-npm"></i>
+                    <p>NPM</p>
+                </div> 
             </div>
 
 
