fixed classes in deployed apps section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="path/to/font-mfizz/font-mfizz.css">
     <link rel="stylesheet" href="assets/style.css" />
     <title>kmvn</title>
   </head>
@@ -80,12 +81,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center align-items-center">
-                <h2 class="sectionHeader" id="portfolioHeader">Deployed Applications</h2>
+                <h2 id="portfolioHeader">Deployed Applications</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center align-items-center">
-                <h4 class="sectionHeader" id="portfolioHeader">Collaborations</h4>
+                <h4 class="sectionHeader">Collaborations</h4>
             </div>
         </div>
     </div>       
@@ -128,7 +129,7 @@
           <!-- Header 2 -->
           <div class="row">
             <div class="col-md-12 d-flex justify-content-center align-items-center">
-                <h4 class="sectionHeader" id="portfolioHeader">Individual Projects</h4>
+                <h4 class="sectionHeader">Individual Projects</h4>
             </div>
            </div> 
         <!-- Row 2 -->
@@ -205,11 +206,11 @@
                     <p>Node.js</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fas fa-database"></i>
+                    <i class="icon-mysql"></i>
                     <p>MySQL</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fas fa-database"></i>
+                    <i class="icon-mongodb"></i>
                     <p>MongoDB</p>
                 </div>
             </div>
@@ -236,11 +237,11 @@
                     <i class="fab fa-npm"></i>
                     <p>NPM</p>
                 </div> 
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="icon-heroku"></i>
+                    <p>Heroku</p>
+                </div> 
             </div>
-
-
-
-
         </div>
         
 
