added contact section, updated picture and skills section

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 d-flex justify-content-center align-items-center">
-            <h2 class="sectionHeader" id="aboutMeHeader">About Me</h2>
+            <h2 id="aboutMeHeader">About Me</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 d-flex justify-content-center align-items-center">
-            <img src="assets/images/fb_propic.jpg" alt="photo of Kristen" class="proPic"/>
+            <img src="assets/images/IMG_1666_cropped.JPG" alt="photo of Kristen" class="proPic"/>
           </div>
           <div class="col-md-8 d-flex flex-column justify-content-center align-items-left description">
             <p>
@@ -174,18 +174,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
-                  <h2 class="sectionHeader" id="aboutMeHeader">Skills</h2>
+                  <h2 id="aboutMeHeader">Strongest Skills</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
-                    <p>JavaScript</p>
-                </div> 
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-react"></i>
                     <p>React</p>
                 </div>
+                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-git-alt"></i>
+                    <p>JavaScript</p>
+                </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-html5"></i>
                     <p>HTML5</p>
@@ -198,7 +198,7 @@
             <br><br>
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
+                    <i class="icon-express"></i>
                     <p>Express</p>
                 </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
@@ -216,38 +216,37 @@
             </div>
             <br><br>
             <div class="row">
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                    <i class=""></i>
                     <p>Material-UI</p>
                 </div> 
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-bootstrap"></i>
                     <p>Bootstrap</p>
                 </div>
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <p>jQuery</p>
-                </div>
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <p>Handlebars</p>
-                </div>
-            </div>
-            <br><br>
-            <div class="row">
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-npm"></i>
                     <p>NPM</p>
                 </div> 
-                <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="icon-heroku"></i>
-                    <p>Heroku</p>
-                </div> 
+            </div>
+            <div class="row d-flex justify-content-center align-items-center">
+                <p>
+                    For a more in-depth list please review my resume or contact me below. 
+                </p>
             </div>
         </div>
-        
-
     </section>
-
     <!-- Contact Me Form -->
+    <section class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 d-flex justify-content-center align-items-center">
+                  <h2 id="aboutMeHeader">Contact</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
