fixed icon sizes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Prata&family=Taviraj:wght@300;400&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="assets/mfizz.css">
+    <link rel="stylesheet" href="assets/font-mfizz.css">
     <link rel="stylesheet" href="assets/style.css" />
     <title>kmvn</title>
   </head>
@@ -179,47 +179,47 @@
             </div>
             <div class="row">
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-react"></i>
+                    <i class="fab fa-react fa-4x"></i>
                     <p>React</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt"></i>
+                    <i class="fab fa-git-alt fa-4x"></i>
                     <p>JavaScript</p>
                 </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-html5"></i>
+                    <i class="fab fa-html5 fa-4x"></i>
                     <p>HTML5</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-css3"></i>
+                    <i class="fab fa-css3 fa-4x"></i>
                     <p>CSS3</p>
                 </div>
             </div>
             <br><br>
             <div class="row">
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fas fa-globe-americas"></i>
+                    <i class="fas fa-globe-americas fa-4x"></i>
                     <p>ArcGIS</p>
                 </div> 
  
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-node"></i>
+                    <i class="fab fa-node fa-4x"></i>
                     <p>Node.js</p>
                 </div>
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="icon-mysql"></i>
+                    <i class="icon-mysql" style="font-size: 4em;"></i>
                     <p>MySQL</p>
                 </div>
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="icon-mongodb"></i>
+                    <i class="icon-mongodb" style="font-size: 4em;"></i>
                     <p>MongoDB</p>
                 </div>
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-bootstrap"></i>
+                    <i class="fab fa-bootstrap fa-4x"></i>
                     <p>Bootstrap</p>
                 </div>
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-npm"></i>
+                    <i class="fab fa-npm fa-4x"></i>
                     <p>NPM</p>
                 </div> 
             </div>
