added contact section and iframe with resume

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <p>React</p>
                 </div>
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-                    <i class="fab fa-git-alt fa-4x"></i>
+                    <i class="fab fa-js-square fa-4x"></i>
                     <p>JavaScript</p>
                 </div> 
                 <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
@@ -201,7 +201,6 @@
                     <i class="fas fa-globe-americas fa-4x"></i>
                     <p>ArcGIS</p>
                 </div> 
- 
                 <div class="col-md-2 d-flex flex-column justify-content-center align-items-center">
                     <i class="fab fa-node fa-4x"></i>
                     <p>Node.js</p>
@@ -253,6 +252,29 @@
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center align-items-center">
                   <h2 id="aboutMeHeader">Contact</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-linkedin fa-4x"></i>
+                    <p>LinkedIn</p>
+                </div>
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-github fa-4x"></i>
+                    <p>GitHub</p>
+                </div>
+                <div class="col-md-4 d-flex flex-column justify-content-center align-items-center">
+                    <i class="fab fa-envelope fa-4x"></i>
+                    <p>kmvanneste17@gmail.com</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <iframe
+                    src="assets/images/VanNeste_Resume_10-2020.pdf"
+                    title="Kristen's Resume"
+                    >
+                    </iframe>
                 </div>
             </div>
         </div>
